--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,12 @@
 {
   "name": "imde22",
   "app_id": "",
-  "type": "ionic1"
+  "type": "ionic1",
+  "integrations": {
+    "gulp": {},
+    "cordova": {}
+  },
+  "watchPatterns": [
+    "scss/**/*"
+  ]
 }
